<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

    <LinearLayout
            android:id="@+id/progress_container"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.ProgressBar"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:text="@string/progress_title"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/network_error_container"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/error_title"/>

        <TextView
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:text="@string/network_error_message"/>

        <Button
                android:id="@+id/network_error_retry_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retry_title"
                android:enabled="true"
                android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/server_error_container"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/error_title"/>

        <TextView
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:text="@string/server_error_message"/>

        <Button
                android:id="@+id/server_error_retry_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retry_title"
                android:enabled="true"
                android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/empty_list_container"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/error_title"/>

        <TextView
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:text="@string/empty_list_message"/>

        <Button
                android:id="@+id/empty_list_retry_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retry_title"
                android:enabled="true"
                android:layout_marginTop="8dp"/>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/main_content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cake_list"
                android:layout_width="match_parent"
                android:scrollbars="vertical"
                android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>